+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.6 alpha 3?
=================================

*Release date: XX-XXX-2008*

Core and builtins
-----------------

- Patch #2617: Reserved -J and -X arguments for Jython, IronPython and other
  implementations of Python. 

Extensions Modules
------------------

- Added kill, terminate and send_signal(sig) to subprocess.Popen.

- Added phase(z) -> phi, polar(z) -> r, phi and rect(r, phi) -> z to the cmath
  module.

- Four new methods were added to the math and cmath modules:
  acosh, asinh, atanh and log1p. 

- zlib.decompressobj().flush(value) no longer crashes the interpreter when
  passed a value less than or equal to zero.

- Issue #1631171: Re-implement the 'warnings' module in C (the original Python
  code has been kept as backup). This will allow for using the 'warning's
  machinery in such places as the parser where use of pure Python code is not
  possible.

Library
-------

- The getpass module has been improved on Unix.  It now uses /dev/tty
  by default and uses stderr instead of stdout.  A GetPassWarning is
  issued when input echo cannot be controlled.

- Issue #2014: Allow XML-RPC datetime objects to have dates before
  1900-01-01.

- Issue #2439: Added new function pkgutil.get_data(), which is a
  convenience wrapper for the PEP 302 get_data() API.

- Issue #2616: The ctypes.pointer() and ctypes.POINTER() functions are
  now implemented in C for better performance.

- Issue #2408: The ``_types`` module, which was used as in implementation
  detail of the public ``types`` module, has been removed and replaced by pure
  python code.

- Issue #2513: distutils on Windows is now capable of cross-compiling 
  extension modules between 32 and 64 bit platforms.  See the distutls
  build documentation for more information.

- Issue #815646: Individual file objects may now be used from multiple